--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "eslint-plugin-prettier": "^2.6.0",
     "husky": "^0.14.3",
     "lint-staged": "^6.1.0",
-    "parcel-bundler": "^1.10.3",
+    "parcel-bundler": "^1.12.3",
     "parcel-plugin-svelte": "^1.2.3",
     "prettier": "1.10.2",
-    "stylelint": "9.4.x",
+    "stylelint": "^10.1.0",
     "stylelint-config-htmlacademy": "0.1.x",
     "svelte": "^2.14.3"
   }
